src/test/deca/context/invalid/testTypesOperator.deca
// Decription : types incompatibles pour l'opérateur <
{
    int x;
    if (x < true) {
        x = 2;
    }
}
